# PyPDFSearcherv2.0

./: .gitignore  HunterAPIkey.txt  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_db.py
alembic/: env.py
app/: agent.py  db.py  emails.py  files.py  hasher.py  report_requests.py  schemas.py  session.py  thread_variables.py
generated_reports/:  Report on Network Cards.docx  - Introduced in 2005..docx  32-bit CPUs.docx  486 Processors.docx  Cache Memory Report.docx  Cache Memory and ROM Report.docx  Cache Memory, ROM, and BIOS Report.docx  Chipsets Report.docx  DDR 2 SDRAM Report.docx  DDR SDRAM Information.docx  DDR SDRAM Report.docx  Difference between 32-bit and 64-bit CPUs.docx  Difference between Core 2 duo and Nehalem.docx  Difference between DRAM and SRAM.docx  Give me a report about SRAM.docx  Give me more information about cache memory.docx  Hard Drives in the File.docx  Hard drives.docx  I apologize if my previous response was unclear. My reports are based exclusively on the information retrieved from the database through the `similarity_search` tool..docx  I need a report on Pentium D.docx  Include a detailed explanation on cache memory in the file.docx  Include more information about dual core architecture in the file.docx  Include more information about supported memory types.docx  Intel Core i5 Report.docx  Magnetic Devices Report.docx  Magnetic devices.docx  Motherboard Report.docx  Motherboard and BIOS Report.docx  Nehalem Report.docx  Network Cards Report.docx  Network adapters.docx  Network card basics.docx  Network cards.docx  (+50 more)
(+15 files in other folders)
